# DearTs

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  IFLOW.md  Project.md  README.md  imgui.ini  架构设计.md  流程图.md
.claude/: settings.local.json
.obsidian/: workspace.json
core/: CMakeLists.txt  CORE.md  DearTsCoreConfig.cmake.in  core.cpp  core.h  dearts_config.h.in
core/app/: application_manager.cpp  application_manager.h
core/audio/: audio_manager.cpp  audio_manager.h
core/events/: event_system.cpp  event_system.h  layout_events.cpp  layout_events.h
core/input/: input_manager.cpp  input_manager.h
core/patterns/: singleton.h
core/render/: renderer.cpp  renderer.h  renderer_adapter.cpp
core/resource/: font_resource.cpp  font_resource.h  material_symbols_icons.hpp  resource_manager.cpp  resource_manager.h  vscode_icons.hpp
core/utils/: config_manager.cpp  config_manager.h  file_utils.cpp  file_utils.h  logger.h  profiler.cpp  profiler.h  string_utils.cpp  string_utils.h
core/window/: README.md  main_window.cpp  main_window.h  main_window_optimized.cpp  main_window_optimized.h  win_aero_snap_handler.cpp  win_aero_snap_handler.h  window_base.cpp  window_base.h  window_manager.cpp  window_manager.h  window_title_bar.cpp  window_title_bar.h
core/window/layouts/: exchange_record_layout.cpp  exchange_record_layout.h  layout_base.cpp  layout_base.h  layout_manager.cpp  layout_manager.h  pomodoro_layout.cpp  pomodoro_layout.h  sidebar_layout.cpp  sidebar_layout.h  title_bar_layout.cpp  title_bar_layout.h
core/window/widgets/clipboard/: clipboard_history_layout.cpp  clipboard_history_layout.h  clipboard_manager.cpp  clipboard_manager.h  clipboard_manager_window.cpp  clipboard_manager_window.h  clipboard_monitor.cpp  clipboard_monitor.h  text_segmentation_layout.cpp  text_segmentation_layout.h  text_segmentation_window.cpp  text_segmentation_window.h  text_segmenter.cpp  text_segmenter.h  url_extractor.cpp  url_extractor.h
docs/: Project.md
examples/: CMakeLists.txt  examples_main.cpp  font_test_demo.cpp  layout_manager_test.cpp  pomodoro_test.cpp  segmentation_test_layout.cpp  segmentation_test_layout.h  sidebar_layout_test.cpp  text_segmentation_test.cpp
lib/libdearts/: CMakeLists.txt
lib/libdearts/cmake/: deartsConfig.cmake.in  libdearts.pc.in
lib/libdearts/include/dearts/: dearts.hpp
lib/libdearts/include/dearts/api/: content_registry.hpp  dearts_api.hpp  event_manager.hpp  plugin_manager.hpp
lib/libdearts/include/dearts/helpers/: utils.hpp
lib/libdearts/source/api/: dearts_api.cpp  event_manager.cpp  plugin_manager.cpp
main/: main.cpp  main_demo.cpp
main/gui/: CMakeLists.txt
main/gui/include/: application_manager.h  gui_application.h  window_manager.h
main/gui/source/: application_manager.cpp  gui_application.cpp  window_manager.cpp
plugins/: CMakeLists.txt  plugin_config.h.in
plugins/builtin/: builtin_plugin.cpp  builtin_plugin.hpp  demo_plugin.cpp  demo_plugin.hpp
resources/: dearts.rc
